watch series nemeh

--- a/apple-main.html
+++ b/apple-main.html
@@ -74,143 +74,109 @@
         </div>
       </section>
 
-      <!-- Gift magic -->
-      <section class="giftmagic-container">
-        <div class="giftmagic">
-          <div class="giftmagic__title">Gift magic.</div>
-          <div class="giftmagic__subtitle">
-            Make their holiday wish come true.
-          </div>
-          <button class="giftmagic__button">Shop gifts</button>
+      <!-- Gift -->
+      <section class="giftmagic">
+        <div class="giftmagic__title">Gift magic.</div>
+        <div class="giftmagic__subtitle">
+          Make their holiday wish come true.
+        </div>
+        <div class="giftmagic__buttons">
+          <button class="btn">Shop gifts</button>
         </div>
       </section>
 
       <!-- Apple Products -->
       <section>
-        <div class="apple-products">
-          <div class="apple-product apple-product--ipadair">
-            <div
-              class="apple-product__title apple-product__title--ipadair"
-            ></div>
-            <div
-              class="apple-product__subtitle apple-product__subtitle--ipadair"
-            >
+        <div class="a-products">
+          <!-- ipadair -->
+          <div class="a-product a-product--ipadair">
+            <div class="a-product__title"></div>
+            <div class="a-product__subtitle">
               Two sizes. Faster chip. Does it all.
             </div>
-            <div class="apple-product__buttons">
-              <button class="apple-product__button">Learn more</button>
-              <button
-                class="apple-product__button apple-product__button--transparent"
-              >
-                Buy
-              </button>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Learn more</button>
+              <button class="btn btn--minor">Buy</button>
             </div>
-            <div class="apple-product__sub">Hello, Apple Intelligence.</div>
+            <div class="a-product__subs">Hello, Apple Intelligence.</div>
           </div>
 
-          <!-- AirPods 4 -->
-          <div class="apple-product apple-product--airpodspro2">
-            <div class="apple-product__title apple-product__title--airpodspro2">
-              AirPods Pro 2
-            </div>
-            <div
-              class="apple-product__subtitle apple-product__subtitle--airpodspro2"
-            >
+          <!-- AirPods Pro 2 -->
+          <div class="a-product a-product--airpodspro2">
+            <div class="a-product__title">AirPods Pro 2</div>
+            <div class="a-product__subtitle">
               Now with a Hearing Aid feature.2
             </div>
-            <div class="apple-product__buttons">
-              <button class="apple-product__button">Learn more</button>
-              <button
-                class="apple-product__button apple-product__button--transparent"
-              >
-                Buy
-              </button>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Learn more</button>
+              <button class="btn btn--minor">Buy</button>
             </div>
           </div>
 
-          <div class="apple-product apple-product--watch">
-            <div class="apple-product__title apple-product__title--watch">
-              WATCH
-            </div>
-            <div class="apple-product__subtitle apple-product__subtitle--watch">
-              Thinstant classic.
-            </div>
-            <div class="apple-product__buttons">
-              <button class="apple-product__button">Learn more</button>
-              <button
-                class="apple-product__button apple-product__button--transparent"
-              >
-                Buy
-              </button>
+          <!-- WATCH -->
+          <div class="a-product a-product--watch">
+            <div class="a-product__title">WATCH</div>
+            <div class="a-product__subtitle">Thinstant classic.</div>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Learn more</button>
+              <button class="btn btn--minor">Buy</button>
             </div>
           </div>
-          <div class="apple-product apple-product--macbookair">
-            <div class="apple-product__title">MacBook Air</div>
-            <div
-              class="apple-product__subtitle apple-product__subtitle--macbookair"
-            >
-              Lean. Mean. M3 machine.
-            </div>
-            <div class="apple-product__buttons">
-              <button class="apple-product__button">Learn more</button>
-              <button
-                class="apple-product__button apple-product__button--transparent"
-              >
-                Buy
-              </button>
+
+          <!-- MacBook Air -->
+          <div class="a-product a-product--macbookair">
+            <div class="a-product__title">MacBook Air</div>
+            <div class="a-product__subtitle">Lean. Mean. M3 machine.</div>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Learn more</button>
+              <button class="btn btn--minor">Buy</button>
             </div>
           </div>
-          <div class="apple-product apple-product--smallbusiness">
-            <div class="apple-product__title">Apple for Small Business</div>
-            <div
-              class="apple-product__subtitle apple-product__subtitle--smallbusiness"
-            >
+
+          <!-- Small Business -->
+          <div class="a-product a-product--smallbusiness">
+            <div class="a-product__title">Apple for Small Business</div>
+            <div class="a-product__subtitle">
               Hardware, software, and expert help - all in one place.
             </div>
-            <div class="apple-product__buttons">
-              <button class="apple-product__button">Learn more</button>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Learn more</button>
             </div>
           </div>
-          <div class="apple-product apple-product--carrierdeals">
-            <div class="apple-product__title">Carrier deals at Apple</div>
-            <div
-              class="apple-product__subtitle apple-product__subtitle--carrierdeals"
-            >
+
+          <!-- Carrier deals -->
+          <div class="a-product a-product--carrierdeals">
+            <div class="a-product__title">Carrier deals at Apple</div>
+            <div class="a-product__subtitle">
               Get up to $1000 in credit on a new iPhone. Trade-in may be
               required.
             </div>
-            <div class="apple-product__buttons">
-              <button class="apple-product__button">Find your deal</button>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Find your deal</button>
             </div>
           </div>
-          <div class="apple-product apple-product--tradein">
-            <div class="apple-product__title apple-product__title--tradein">
-              Trade In
-            </div>
-            <div
-              class="apple-product__subtitle apple-product__subtitle--tradein"
-            >
+
+          <!-- Trade In -->
+          <div class="a-product a-product--tradein">
+            <div class="a-product__title">Trade In</div>
+            <div class="a-product__subtitle">
               Get $180–$650 in credit when you trade in iPhone 12 or higher.3
             </div>
-            <div class="apple-product__buttons">
-              <button class="apple-product__button">Get your estimate</button>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Get your estimate</button>
             </div>
           </div>
-          <div class="apple-product apple-product--card">
-            <div class="apple-product__title apple-product__title--card">
-              Card
-            </div>
-            <div class="apple-product__subtitle apple-product__subtitle--card">
+
+          <!-- Card -->
+          <div class="a-product a-product--card">
+            <div class="a-product__title">Card</div>
+            <div class="a-product__subtitle">
               Get up to 3% Daily Cash back<br />
               with every purchase.
             </div>
-            <div class="apple-product__buttons">
-              <button class="apple-product__button">Learn more</button>
-              <button
-                class="apple-product__button apple-product__button--transparent"
-              >
-                Apply now
-              </button>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Learn more</button>
+              <button class="btn btn--major">Apply now</button>
             </div>
           </div>
         </div>
