start from product pad

--- a/apple-main.html
+++ b/apple-main.html
@@ -98,7 +98,7 @@
               <button class="btn btn--major">Learn more</button>
               <button class="btn btn--minor">Buy</button>
             </div>
-            <div class="a-product__subs">Hello, Apple Intelligence.</div>
+            <div class="a-product__aisub">Hello, Apple Intelligence.</div>
           </div>
 
           <!-- AirPods Pro 2 -->
@@ -116,6 +116,7 @@
           <!-- WATCH -->
           <div class="a-product a-product--watch">
             <div class="a-product__title">WATCH</div>
+            <div class="a-product__midtitle">SERIES 10</div>
             <div class="a-product__subtitle">Thinstant classic.</div>
             <div class="a-product__buttons">
               <button class="btn btn--major">Learn more</button>
@@ -160,7 +161,8 @@
           <div class="a-product a-product--tradein">
             <div class="a-product__title">Trade In</div>
             <div class="a-product__subtitle">
-              Get $180–$650 in credit when you trade in iPhone 12 or higher.3
+              Get $180–$650 in credit when you<br />
+              trade in iPhone 12 or higher.3
             </div>
             <div class="a-product__buttons">
               <button class="btn btn--major">Get your estimate</button>
@@ -176,7 +178,7 @@
             </div>
             <div class="a-product__buttons">
               <button class="btn btn--major">Learn more</button>
-              <button class="btn btn--major">Apply now</button>
+              <button class="btn btn--minor">Apply now</button>
             </div>
           </div>
         </div>
