--- a/apple-main.html
+++ b/apple-main.html
@@ -138,7 +138,8 @@
           <div class="a-product a-product--smallbusiness">
             <div class="a-product__title">Apple for Small Business</div>
             <div class="a-product__subtitle">
-              Hardware, software, and expert help - all in one place.
+              Hardware, software, and<br />
+              expert help - all in one place.
             </div>
             <div class="a-product__buttons">
               <button class="btn btn--major">Learn more</button>
