--- a/apple-main.html
+++ b/apple-main.html
@@ -113,6 +113,20 @@
             </div>
           </div>
 
+          <!-- AirPods 4 -->
+          <div class="a-product a-product--airpods4">
+            <div class="a-product__title">AirPods 4</div>
+            <div class="a-product__subtitle">
+              Iconic. Now supersonic.<br />
+              Available with Active Noise<br />
+              Cancellation.2
+            </div>
+            <div class="a-product__buttons">
+              <button class="btn btn--major">Learn more</button>
+              <button class="btn btn--minor">Buy</button>
+            </div>
+          </div>
+
           <!-- WATCH -->
           <div class="a-product a-product--watch">
             <div class="a-product__title">WATCH</div>
@@ -150,8 +164,9 @@
           <div class="a-product a-product--carrierdeals">
             <div class="a-product__title">Carrier deals at Apple</div>
             <div class="a-product__subtitle">
-              Get up to $1000 in credit on a new iPhone. Trade-in may be
-              required.
+              Get up to $1000 in credit on<br />
+              a new iPhone. Trade-in may<br />
+              be required.
             </div>
             <div class="a-product__buttons">
               <button class="btn btn--major">Find your deal</button>
