--- a/apple-main.html
+++ b/apple-main.html
@@ -203,6 +203,64 @@
       </section>
 
       <!-- apple tv scroll -->
+      <section class="atv-scroller">
+        <div class="atv-slide amov1">
+          <img src="images/amov1.jpg" class="atv-slide__img" />
+          <div class="atv-slide__text">
+            <button class="btn">Stream now</button>
+            <div class="genre"></div>
+          </div>
+        </div>
+
+        <div class="atv-slide amov2">
+          <img src="images/amov2.png" class="atv-slide__img" />
+          <div class="atv-slide__text">
+            <button class="btn">Stream now</button>
+            <div class="genre">
+              <span>Comedy</span> · Will they make history…or fake it?
+            </div>
+          </div>
+        </div>
+
+        <div class="atv-slide amov3">
+          <img src="images/amov3.jpg" class="atv-slide__img" />
+          <div class="atv-slide__text">
+            <button class="btn">Stream now</button>
+            <div class="genre"></div>
+          </div>
+        </div>
+
+        <div class="atv-slide amov4">
+          <img src="images/amov4.png" class="atv-slide__img" />
+          <div class="atv-slide__text">
+            <button class="btn">Stream now</button>
+            <div class="genre"></div>
+          </div>
+        </div>
+
+        <div class="atv-slide amov5">
+          <img src="images/amov5.jpg" class="atv-slide__img" />
+          <div class="atv-slide__text">
+            <button class="btn">Stream now</button>
+            <div class="genre"></div>
+          </div>
+        </div>
+        <!-- dots -->
+        <div class="dots-wrapper">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
+        </div>
+      </section>
+
+      <!-- umnuh -->
       <section class="tv-scroller">
         <div class="tv-slides-container">
           <div class="tv-slides">
