movie scroller pad mob ended

--- a/apple-main.html
+++ b/apple-main.html
@@ -202,111 +202,100 @@
         </div>
       </section>
 
-      <!-- apple tv scroll -->
-      <section class="atv-scroller">
-        <div class="atv-slide amov1">
-          <img src="images/amov1.jpg" class="atv-slide__img" />
-          <div class="atv-slide__text">
-            <button class="btn">Stream now</button>
-            <div class="genre"></div>
+      <!-- a-tv scroll -->
+      <section>
+        <div class="atv-scroller">
+          <div class="atv-slide amov1">
+            <img src="images/amov1.jpg" class="atv-slide__img" />
+            <img src="images/amov1.mob.png" class="atv-slide__img-mob" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre"></div>
+            </div>
           </div>
-        </div>
 
-        <div class="atv-slide amov2">
-          <img src="images/amov2.png" class="atv-slide__img" />
-          <div class="atv-slide__text">
-            <button class="btn">Stream now</button>
-            <div class="genre">
-              <span>Comedy</span> · Will they make history…or fake it?
+          <div class="atv-slide amov2">
+            <img src="images/amov2.png" class="atv-slide__img" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre">
+                <span>Comedy</span> · Will they make history…or fake it?
+              </div>
+            </div>
+          </div>
+
+          <div class="atv-slide amov3">
+            <img src="images/amov3.jpg" class="atv-slide__img" />
+            <img src="images/amov3.mob.png" class="atv-slide__img-mob" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+
+          <div class="atv-slide amov4">
+            <img src="images/amov4.png" class="atv-slide__img" />
+            <img src="images/amov4.mob.png" class="atv-slide__img-mob" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre">
+                <span>Drama</span> · Saoirse Ronan stars in a wartime family
+                epic from director Steve McQueen.
+              </div>
+            </div>
+          </div>
+
+          <div class="atv-slide amov5">
+            <img src="images/amov5.jpg" class="atv-slide__img" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+
+          <div class="atv-slide amov6">
+            <img src="images/amov6.mob.png" class="atv-slide__img-mob" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+
+          <div class="atv-slide amov7">
+            <img src="images/amov7.mob.png" class="atv-slide__img-mob" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+
+          <div class="atv-slide amov8">
+            <img src="images/amov8.mob.png" class="atv-slide__img-mob" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+
+          <div class="atv-slide amov9">
+            <img src="images/amov9.mob.png" class="atv-slide__img-mob" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+
+          <div class="atv-slide amov10">
+            <img src="images/amov10.mob.png" class="atv-slide__img-mob" />
+            <div class="atv-slide__text">
+              <button class="btn">Stream now</button>
+              <div class="genre"></div>
             </div>
           </div>
         </div>
 
-        <div class="atv-slide amov3">
-          <img src="images/amov3.jpg" class="atv-slide__img" />
-          <div class="atv-slide__text">
-            <button class="btn">Stream now</button>
-            <div class="genre"></div>
-          </div>
-        </div>
-
-        <div class="atv-slide amov4">
-          <img src="images/amov4.png" class="atv-slide__img" />
-          <div class="atv-slide__text">
-            <button class="btn">Stream now</button>
-            <div class="genre"></div>
-          </div>
-        </div>
-
-        <div class="atv-slide amov5">
-          <img src="images/amov5.jpg" class="atv-slide__img" />
-          <div class="atv-slide__text">
-            <button class="btn">Stream now</button>
-            <div class="genre"></div>
-          </div>
-        </div>
         <!-- dots -->
         <div class="dots-wrapper">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-        </div>
-      </section>
-
-      <!-- umnuh -->
-      <section class="tv-scroller">
-        <div class="tv-slides-container">
-          <div class="tv-slides">
-            <div class="tv-slide">
-              <img src="images/mov1.jpg" class="tv-slide__img" />
-              <div class="tv-slide__text">
-                <button class="tv-slide__button">Stream now</button>
-                <div class="tv-slide-text__info"></div>
-              </div>
-            </div>
-            <div class="tv-slide">
-              <img src="images/mov2.png" class="tv-slide__img" />
-              <div class="tv-slide__text">
-                <button class="tv-slide__button">Stream now</button>
-                <div class="tv-slide-text__info">
-                  <span>Comedy</span> · Will they make history…or fake it?
-                </div>
-              </div>
-            </div>
-            <div class="tv-slide">
-              <img src="images/mov3.jpg" class="tv-slide__img" />
-              <div class="tv-slide__text">
-                <button class="tv-slide__button">Stream now</button>
-                <div class="tv-slide-text__info"></div>
-              </div>
-            </div>
-            <div class="tv-slide">
-              <img src="images/mov4.pad.png" class="tv-slide__img" />
-              <div class="tv-slide__text">
-                <button class="tv-slide__button">Stream now</button>
-                <div class="tv-slide-text__info">
-                  <span>Drama</span> · Saoirse Ronan stars in a wartime family
-                  epic from director Steve McQueen.
-                </div>
-              </div>
-            </div>
-            <div class="tv-slide">
-              <img src="images/mov5.pad.jpg" class="tv-slide__img" />
-              <div class="tv-slide__text">
-                <button class="tv-slide__button">Stream now</button>
-                <div class="tv-slide-text__info"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tv-dot-box">
           <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
@@ -325,7 +314,7 @@
         <div class="content-slides-container">
           <div class="content-slides">
             <div class="content-slide">
-              <img src="images/cont1.png" class="content-slide__img" />
+              <img src="images/cont1.png" class="content-slide__img amov1" />
               <div class="content-slide__title">
                 Improve Your Posture wicth<br />
                 Pilates
