last scroller need to do desk and pad and mob

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hanuman:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>apple.com</title>
+    <title>Apple</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <main>
+    <main class="home">
       <!-- header -->
       <header>
-        <a href="https://www.apple.com/" class="header-logo">
+        <a href="/" class="header-logo">
           <img src="images/header-logo.svg" />
         </a>
 
         <nav class="header-nav">
-          <a href="-" class="item">Store</a>
+          <a href="apple-store.html" class="item">Store</a>
           <a href="-" class="item">Mac</a>
           <a href="-" class="item">iPad</a>
           <a href="-" class="item">iPhone</a>
@@ -309,6 +309,48 @@
         </div>
       </section>
 
+      <!-- a-content scroll -->
+      <section class="acontent-scroller">
+        <div class="acontent-slides">
+          <div class="acontent-slide acont1">
+            <img src="images/acont1.png" class="acontent-slide__img" />
+            <div class="acontent-slide__title"></div>
+          </div>
+
+          <div class="acontent-slide acont2">
+            <img src="images/acont2.png" class="acontent-slide__img" />
+            <div class="acontent-slide__title"></div>
+          </div>
+
+          <div class="acontent-slide acont3">
+            <img src="images/acont3.png" class="acontent-slide__img" />
+            <div class="acontent-slide__title"></div>
+          </div>
+
+          <div class="acontent-slide acont4">
+            <img src="images/acont4.png" class="acontent-slide__img" />
+            <div class="acontent-slide__title"></div>
+          </div>
+
+          <div class="acontent-slide acont5">
+            <img src="images/acont5.jpg" class="acontent-slide__img" />
+            <div class="acontent-slide__title"></div>
+          </div>
+
+          <div class="acontent-slide acont6">
+            <img src="images/acont6.mob.png" class="acontent-slide__img" />
+            <div class="acontent-slide__title"></div>
+          </div>
+
+          <div class="acontent-slide acont7">
+            <img src="images/acont7.mob.jpg" class="acontent-slide__img" />
+            <div class="acontent-slide__title"></div>
+          </div>
+        </div>
+      </section>
+
+      <!-- dlkflfhdfhl -->
+      <!-- dlkflfhdfhl -->
       <!-- apple content scroll -->
       <section class="content-scroller">
         <div class="content-slides-container">
